--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+citus-enterprise (6.0.1.citus-1) stable; urgency=low
+
+  * Fixes a bug causing failures during pg_upgrade
+
+  * Fixes a bug preventing DML queries during colocated table creation
+
+  * Fixes a bug that caused NULL parameters to be incorrectly passed as text
+
+ -- Burak Yucesoy <burak@citusdata.com>  Wed, 30 Nov 2016 17:15:16 +0000
+
 citus-enterprise (6.0.0.citus-1) stable; urgency=low
 
   * Adds compatibility with PostgreSQL 9.6, now the recommended version
