Switch to 'fancy' versioning
Similar to community edition, we switch 'fancy' versioning in enterprise
repos.

Merging will release postgresql-9.5-citus-enterprise-6.0 and
postgresql-9.5-citus-enterprise-6.0. The version will be 6.0.1.citus-3 and
existing Citus users can easily upgrade with an apt-get dist-upgrade command
(so long as we remember to add the 6.0.1.citus-2 transitional package to our
repository). All sub-sequent 'fancy' version packages will conflict with one
another, ensuring two versions cannot be installed at the same time

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+citus-enterprise (6.0.1.citus-3) stable; urgency=low
+
+  * First build using new versioning practices
+
+ -- Burak Yucesoy <burak@citusdata.com>  Fri, 10 Feb 2017 17:10:22 +0000
+
+citus-enterprise (6.0.1.citus-2) stable; urgency=low
+
+  * Transitional package to guide users to new package name
+
+ -- Burak Yucesoy <burak@citusdata.com>  Fri, 10 Feb 2017 17:05:34 +0000
+
 citus-enterprise (6.0.1.citus-1) stable; urgency=low
 
   * Fixes a bug causing failures during pg_upgrade
