Switch to 'fancy' versioning
Merging will release postgresql-9.5-citus-rebalancer-6.0 and
postgresql-9.5-citus-rebalancer-6.0 packages.

The version will be 6.0.0.citus-3 and existing Citus users can easily
upgrade with an apt-get dist-upgrade command (so long as we remember to
add the 6.0.0.citus-2 transitional package to our repository). All sub-
sequent 'fancy' version packages will conflict with one another,
ensuring two versions cannot be installed at the same time.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+citus-rebalancer (6.0.0.citus-3) stable; urgency=low
+
+  * First build using new versioning practices
+
+ -- Jason Petersen <jason@citusdata.com>  Tue, 21 Feb 2017 15:53:19 +0000
+
+citus-rebalancer (6.0.0.citus-2) stable; urgency=low
+
+  * Transitional package to guide users to new package name
+
+ -- Jason Petersen <jason@citusdata.com>  Tue, 21 Feb 2017 15:44:46 +0000
+
 citus-rebalancer (6.0.0.citus-1) stable; urgency=low
 
   * Adds compatibility with Citus 6.0 and higher
