--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (6.2.4.citus-1) stable; urgency=low
+
+  * Updates task-tracker to limit file access
+
+ -- Burak Yucesoy <burak@citusdata.com>  Thu, 28 Sep 2017 21:31:35 +0000
+
 citus (6.1.3.citus-1) stable; urgency=low
 
   * Updates task-tracker to limit file access
