--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (6.1.3.citus-1) stable; urgency=low
+
+  * Updates task-tracker to limit file access
+
+ -- Burak Yucesoy <burak@citusdata.com>  Thu, 28 Sep 2017 23:13:50 +0000
+
 citus-enterprise (7.0.1.citus-1) stable; urgency=low
 
   * Fixes a bug that could cause memory leaks in INSERT ... SELECT queries
