--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (6.2.5.citus-1) stable; urgency=low
+
+  * Fixes a bug that could crash the coordinator while reporting a remote error
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Thu, 11 Jan 2018 10:13:22 +0000
+
 citus (7.1.2.citus-1) stable; urgency=low
 
   * Fixes a bug that could cause assigning wrong IDs to transactions
