--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+citus (8.0.0.PGDG-1) unstable; urgency=medium
+
+  * Team upload.
+  * New upstream version.
+
+ -- Christoph Berg <myon@debian.org>  Thu, 08 Nov 2018 22:53:59 +0100
+
 citus (7.5.1.PGDG-1) unstable; urgency=low
 
   * Improves query pushdown planning performance
