--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,6 @@
 pg-auto-failover (1.0.1) testing; urgency=low
 
-  * Fix a problem where the service was not restarted when shutdown (#2)
-
-  * Clarify name in background workers for the monitor (#3)
-
-  * Show full version number in `pg_autoctl version` (#4)
+  * Official release of 1.0.1
 
  -- Nils Dijk <nils@citusdata.com>  Mon, 6 May 2019 16:00:00 +0200
 
