--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (8.2.2.citus-1) stable; urgency=low
+
+  * Fixes a bug in outer joins wrapped in subqueries
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Wed, 12 Jun 2019 8:45:08 +0000
+
 citus (8.2.1.citus-1) stable; urgency=low
 
   * Fixes a bug that prevents stack size to be adjusted
