pg_auto_failover v1.0.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.0.5) testing; urgency=low
+  
+  * Official release of 1.0.5
+
+ -- Murat Tuncer <murat.tuncer@microsoft.com>  Fri, 20 Sep 2019 14:00:00 +0200
+
 pg-auto-failover (1.0.4) testing; urgency=low
   
   * Official release of 1.0.4
