--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.0.5) testing; urgency=low
+  
+  * Official release of pg-auto-failover-enterprise  v1.0.5
+
+ -- Murat Tuncer <murat.tuncer@microsoft.com>  Thu, 26 Sep 2019 16:00:00 +0200
+
 pg-auto-failover-enterprise (1.0.3) testing; urgency=low
 
   * Official release of pg-auto-failover-enterprise  v1.0.3
