--- a/debian/changelog
+++ b/debian/changelog
@@ -52,7 +52,7 @@ citus-enterprise (9.2.0.citus-1) stable; urgency=low
 
   * Restricts LIMIT approximation for non-commutative aggregates
 
- -- Burak Velioglu <velioglub@citusdata.com>  Tue, 11 Feb 2020 13:20:21 +0000
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Tue, 11 Feb 2020 13:20:21 +0000
 
 citus-enterprise (9.1.1.citus-1) stable; urgency=low
 
