--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (9.2.2.citus-1) stable; urgency=low
+
+  * Fixes a bug that could cause crashes if distribution key is NULL
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Fri, 6 Mar 2020 7:14:57 +0000
+
 citus-enterprise (9.2.1.citus-1) stable; urgency=low
 
   * Fixes a bug that could cause crashes if distribution key is NULL
