--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+citus (9.0.2.citus-1) stable; urgency=low
+
+  * Fixes a bug that caused some prepared stmts with function calls to fail
+
+  * Fixes a bug that caused some prepared stmts with composite types to fail
+
+  * Fixes a bug that caused missing subplan results in workers
+
+  * Improves performance of re-partition joins
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Fri, 6 Mar 2020 14:10:16 +0000
+
 citus (9.2.2.citus-1) stable; urgency=low
 
   * Fixes a bug that caused some prepared stmts with function calls to fail
