--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,9 @@
 citus (9.0.2.citus-1) stable; urgency=low
+  * Fixes build errors on EL/OL 6 based distros
 
-  * Fixes a bug that caused some prepared stmts with function calls to fail
+  * Fixes a bug that caused maintenance daemon to fail on standby nodes
 
-  * Fixes a bug that caused some prepared stmts with composite types to fail
-
-  * Fixes a bug that caused missing subplan results in workers
-
-  * Improves performance of re-partition joins
+  * Disallows distributed function creation when replication_model is `statement`
 
  -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Fri, 6 Mar 2020 14:10:16 +0000
 
