--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.2) testing; urgency=low
+
+  * Official release of 1.2
+
+ -- Murat Tuncer <murat.tuncer@microsoft.com>  Mon, 16 Mar 2020 20:00:00 +0200
+
 pg-auto-failover (1.0.6) testing; urgency=low
 
   * Official release of 1.0.6
