--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ citus-enterprise (9.2.3.citus-1) stable; urgency=low
 
   * Disallows distributed function creation when replication_model is statement
 
- -- Burak Velioglu <velioglub@citusdata.com>  Thu, 26 Mar 2020 8:25:55 +0000
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Thu, 26 Mar 2020 8:25:55 +0000
 
 citus-enterprise (9.0.2.citus-1) stable; urgency=low
   
