--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+citus-enterprise (9.2.4.citus-1) stable; urgency=low
+
+  * Fixes build errors on EL/OL 6 based distros
+
+  * Fixes a bug that caused maintenance daemon to fail on standby nodes
+
+  * Disallows distributed function creation when replication_model is statement
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Tue, 31 Mar 2020 8:7:33 +0000
+
 citus-enterprise (9.2.3.citus-1) stable; urgency=low
 
   * Fixes build errors on EL/OL 6 based distros
