--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.3.2-1) stable; urgency=low
+
+  * Official 1.3.2 release of pg_auto_failover enterprise
+
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Mon, 23 Nov 2020 10:15:53 +0000
+
 pg-auto-failover-enterprise (1.3.1-1) stable; urgency=low
 
   * Official 1.3.1 release of pg_auto_failover enterprise
