--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (-1) stable; urgency=low
+
+  * Official  release of pg_auto_failover
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 25 Mar 2021 7:39:18 +0000
+
 pg-auto-failover (1.4.2-1) stable; urgency=low
 
   * Official 1.4.2 release of pg_auto_failover
