--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.5.1-1) stable; urgency=low
+
+  * Official 1.5.1 release of pg_auto_failover enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 25 Mar 2021 16:28:9 +0000
+
 pg-auto-failover-enterprise (1.4.2-1) stable; urgency=low
 
   * Official 1.4.2 release of pg_auto_failover enterprise
