--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+pgcron (1.3.1.citus-1) stable; urgency=low
+
+  * Fixes a memory leak
+
 pgcron (1.3.0.citus-1) stable; urgency=low
 
   * Background worker support
