--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.5.2-1) stable; urgency=low
+
+  * Official 1.5.2 release of pg_auto_failover
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 21 May 2021 8:2:9 +0000
+
 pg-auto-failover (1.5.1-1) stable; urgency=low
 
   * Official 1.5.1 release of pg_auto_failover
