--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+citus (9.5.6.citus-1) stable; urgency=low
+  
+  * Fixes minor bug in `citus_prepare_pg_upgrade` that caused it to lose its
+    idempotency
+  
+ -- Gurkan <gindibay@microsoft.com>  Fri, 09 Jul 2021 06:42:03 +0000  
+ 
 citus (9.4.5.citus-1) stable; urgency=low
   
   * Adds a configure flag to enforce security
