--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+citus-enterprise (9.5.6.citus-1) stable; urgency=low
+  
+  * Fixes minor bug in `citus_prepare_pg_upgrade` that caused it to lose its
+    idempotency
+  
+ -- Gurkan <gindibay@microsoft.com>  Fri, 09 Jul 2021 14:19:37 +0000  
+ 
 citus-enterprise (10.0.3.citus-1) stable; urgency=low
 
   * Prevents infinite recursion for queries that involve UNION ALL
