--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+citus-enterprise (9.5.6.citus-1) stable; urgency=low
+  
+  * Fixes minor bug in `citus_prepare_pg_upgrade` that caused it to lose its
+    idempotency
+  
+ -- Gurkan <gindibay@microsoft.com>  Mon, 12 Jul 2021 06:33:04 +0000  
+ 
 citus-enterprise (9.4.5.citus-1) stable; urgency=low
   
   * Adds a configure flag to enforce security
