--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,29 @@
+citus (10.0.4.citus-1) stable; urgency=low
+  
+  * Introduces `citus.local_hostname` GUC for connections to the current node
+  
+  * Removes dependencies on the existence of public schema
+  
+  * Removes limits around long partition names
+  
+  * Fixes a bug that can cause a crash when DEBUG4 logging is enabled
+  
+  * Fixes a bug that causes pruning incorrect shard of a range distributed table
+  
+  * Fixes an issue that could cause citus_finish_pg_upgrade to fail
+  
+  * Fixes FROM ONLY queries on partitioned tables
+  
+  * Fixes issues caused by public schema being omitted in queries
+  
+  * Fixes problems with concurrent calls of DropMarkedShards
+  
+  * Fixes relname null bug when using parallel execution
+  
+  * Fixes two race conditions in the get_rebalance_progress
+  
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 16 Jul 2021 10:58:55   
+ 
 citus (9.5.6.citus-1) stable; urgency=low
   
   * Fixes minor bug in `citus_prepare_pg_upgrade` that caused it to lose its
