--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+pg-auto-failover-enterprise (1.5.2-1) stable; urgency=low
+  
+  This release is a bugfix release on-top of the community version.
+  
+  * Apply changes from community version
+  * Stop ignoring failure to activate a worker node. [#301]
+  * Fix/drop node from coordinator [#302]
+  
+  
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 10 Aug 2021 11:09:04 +0000  
+ 
 pg-auto-failover-enterprise (1.6.1-1) stable; urgency=low
   
   This release is a bugfix release on-top of the community version.
