--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+citus (9.4.6.citus-1) stable; urgency=low
+  
+  * Allows more graceful failovers when replication factor > 1
+  
+  * Improves master_update_table_statistics and provides distributed deadlock
+    detection
+  
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 11 Aug 2021 08:57:04 +0000  
+ 
 citus (10.1.1.citus-1) stable; urgency=low
   
   * Improves citus_update_table_statistics and provides distributed deadlock
