--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+citus (10.1.1.citus-1) stable; urgency=low
+  
+  * Improves citus_update_table_statistics and provides distributed deadlock
+    detection
+  
+  * Fixes showing target shard size in the rebalance progress monitor
+  
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 24 Aug 2021 05:44:56 +0000  
+ 
 citus (10.1.2.citus-1) stable; urgency=low
   
   * Allows more graceful failovers when replication factor > 1
