--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+pg-auto-failover-enterprise (1.6.2-1) stable; urgency=low
+  
+  This release is a bugfix release on-top of the community version.
+  
+  * Apply changes from community version
+  * Ensure that adding a Citus read replica node does not impact the
+    number-sync-standbys setting (#318)
+  
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 13 Sep 2021 08:48:32 +0000  
+ 
 pg-auto-failover-enterprise (1.6.1-1) stable; urgency=low
   
   This release is a bugfix release on-top of the community version.
