--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,5 @@
-pg-auto-failover-enterprise (1.6.2-1) stable; urgency=low
+* Fri Sep 17 2021 - Gurkan Indibay <gindibay@microsoft.com> 1.6.2-2
+- Official 1.6.2 release of Pg Auto Failover Enterprisepg-auto-failover-enterprise (1.6.2-1) stable; urgency=low
   
   * Official 1.6.2 release of pg_auto_failover enterprise
   
