--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.6.2-2) stable; urgency=low
+
+  * Removes encryption from packages
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 17 Sep 2021 11:48:32 +0000
+
 pg-auto-failover-enterprise (1.6.2-1) stable; urgency=low
   
   * Official 1.6.2 release of pg_auto_failover enterprise
