--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.1.3.citus-1) stable; urgency=low
+
+  * Official 10.1.3 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 20 Sep 2021 05:57:32 +0000  
+ 
 citus (10.2.0.citus-1) stable; urgency=low
   
   * Adds PostgreSQL 14 support
