--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.0.3.citus-1) stable; urgency=low
+
+  * Test Changelog Entry which is very long
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 20 Sep 2021 10:17:55 +0000
+
 citus (10.1.3.citus-1) stable; urgency=low
 
   * Official 10.1.3 release of Citus
