--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pgcron (1.4.1.citus-1) stable; urgency=low
+
+  * Official 1.4.1 release of Citus
+
+ -- Gurkan Indibay <marco@citusdata.com>  Mon, 29 Sep 2021 14:55:45 +0000
+
 pgcron (1.3.1.citus-1) stable; urgency=low
 
   * Fixes a memory leak
