--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,12 @@
 pgcron (1.4.2.citus-1) stable; urgency=low
 
-  * Official 1.4.2 release of Citus
+  * Official 1.4.2 release of Pg Cron
 
  -- Gurkan Indibay <marco@citusdata.com>  Thu, 18 Aug 2022 14:55:45 +0000
 
 pgcron (1.4.1.citus-1) stable; urgency=low
 
-  * Official 1.4.1 release of Citus
+  * Official 1.4.1 release of Pg Cron
 
  -- Gurkan Indibay <marco@citusdata.com>  Mon, 29 Sep 2021 14:55:45 +0000
 
